[gd_scene load_steps=9 format=3 uid="uid://ssgcokb3iqku"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_l67lk"]
[ext_resource type="PackedScene" uid="uid://c43wdaiifwlc3" path="res://Player/Model/player_model.tscn" id="2_0nwtv"]
[ext_resource type="Shader" path="res://Shader/pixel.gdshader" id="3_hfgjp"]
[ext_resource type="Texture2D" uid="uid://bi2ydm2jvd8kb" path="res://Player/player_shadow.png" id="4_0uq2a"]
[ext_resource type="AudioStream" uid="uid://bj5kdu8vrhsue" path="res://Sounds/pickupCoin.wav" id="4_xco5x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkqp2"]
radius = 0.172385
height = 0.994709

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d3007"]
render_priority = 0
shader = ExtResource("3_hfgjp")

[sub_resource type="QuadMesh" id="QuadMesh_lwggk"]
material = SubResource("ShaderMaterial_d3007")

[node name="Player" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_l67lk")

[node name="Model" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
skeleton = NodePath("../..")

[node name="PlayerModel" parent="CharacterBody3D/Model" instance=ExtResource("2_0nwtv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.496269, 0)
shape = SubResource("CapsuleShape3D_rkqp2")

[node name="PlayerArea" type="Area3D" parent="CharacterBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/PlayerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.496631, 0)
shape = SubResource("CapsuleShape3D_rkqp2")

[node name="CamOrigin" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.19209e-07)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/CamOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.958666, 0.284534, 0, -0.284534, 0.958666, 0, 1.30485, 1.99994)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/CamOrigin/Camera3D"]
transform = Transform3D(4, 0, 0, 0, 4, -3.57628e-07, 0, 3.57628e-07, 4, 0, 0.1, -0.1)
visible = false
mesh = SubResource("QuadMesh_lwggk")

[node name="RaycastDown" type="RayCast3D" parent="CharacterBody3D"]
target_position = Vector3(0, -5, 0)

[node name="CoinSound" type="AudioStreamPlayer3D" parent="CharacterBody3D"]
stream = ExtResource("4_xco5x")

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="Shadow" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.002, -0.025)
pixel_size = 0.02
axis = 1
billboard = 2
alpha_hash_scale = 0.0
texture_filter = 0
texture = ExtResource("4_0uq2a")

[connection signal="timeout" from="CoyoteTimer" to="CharacterBody3D" method="_on_coyote_timer_timeout"]
